--- a/Tutorial4_Python.html
+++ b/Tutorial4_Python.html
@@ -13056,19 +13056,6 @@ ul.typeahead-list  > li > a.pull-right {
 .ansi-bold { font-weight: bold; }
 
     </style>
-<style type="text/css">
-    /*This file contains any manual css for this page that needs to override the global styles.
-This is only required when different pages style the same element differently. This is just
-a hack to deal with our current css styles and no new styling should be added in this file.*/
-
-#ipython-main-app {
-    position: relative;
-}
-#jupyter-main-app {
-    position: relative;
-}
-
-    </style>
 
 
 <style type="text/css">
@@ -13130,13 +13117,13 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="Tutorial-4">Tutorial 4<a class="anchor-link" href="#Tutorial-4">&#182;</a></h1><h2 id="1.--Import-Data">1.  Import Data<a class="anchor-link" href="#1.--Import-Data">&#182;</a></h2><ol>
-<li>Import the pandas python module and name it <code>pd</code></li>
-<li>Load the excel sheet "Data" from excel file "data.xlsx" into a data frame called <code>data</code>.</li>
+<li>Import the <code>pandas</code> python module and name it <code>pd</code></li>
+<li>Load the Excel sheet "Data" from Excel file "data.xlsx" into a dataframe called <code>data</code>.</li>
 <li>Display the number of rows and columns in <code>data</code>.</li>
-<li>Display the fist 10 rows at the top (head) of the <code>data</code> table.</li>
-<li>Load the excel sheet "Peak" from excel file "data.xlsx" into a data frame called <code>peak</code>.</li>
+<li>Display the first 10 rows at the top (head) of the <code>data</code> table.</li>
+<li>Load the Excel sheet "Peak" from Excel file "data.xlsx" into a dataframe called <code>peak</code>.</li>
 <li>Display the number of rows and columns in <code>peak</code>.</li>
-<li>Display the fist 10 rows at the top (head) of the <code>peak</code> table.</li>
+<li>Display the first 10 rows at the top (head) of the <code>peak</code> table.</li>
 </ol>
 
 </div>
@@ -13623,12 +13610,12 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="2.-Histagram-of-RSD">2. Histagram of RSD<a class="anchor-link" href="#2.-Histagram-of-RSD">&#182;</a></h2><ol>
-<li>Import the matplotlib.pyplot visualisation package and name it <code>plt</code></li>
-<li>Invoke special command to help simplifiy plotting - <code>%matplotlib inline</code></li>
+<h2 id="2.-Histogram-of-RSD">2. Histogram of RSD<a class="anchor-link" href="#2.-Histogram-of-RSD">&#182;</a></h2><ol>
+<li>Import the <code>matplotlib.pyplot</code> visualisation package and name it <code>plt</code></li>
+<li>Invoke the special "Jupyter Magic" command <code>%matplotlib inline</code> to help simplify plotting</li>
 <li>Create a histogram of the column <code>peak.RSD</code></li>
-<li>Label the figure</li>
-<li>output the final figure using the function <code>plt.show()</code></li>
+<li>Add an x-axis label "RSD" to the figure</li>
+<li>Generate the figure using the function <code>plt.show()</code></li>
 </ol>
 
 </div>
@@ -13678,7 +13665,7 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="3.-Jointplot-of-RSD-vs.-D-Ratio">3. Jointplot of RSD vs. D-Ratio<a class="anchor-link" href="#3.-Jointplot-of-RSD-vs.-D-Ratio">&#182;</a></h2><ol>
-<li>Import the seaborn visualisation package and name it <code>sns</code></li>
+<li>Import the <code>seaborn</code> visualisation package and name it <code>sns</code></li>
 <li>Create a plot of <code>peak</code> columns <code>peak.RSD</code> vs. <code>peak.D-Ratio</code> with bivariate and distribution graphs. (automatically displayed)</li>
 </ol>
 
@@ -13739,9 +13726,16 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="4.-PCA-score-plot-of-QC-vs.-Sample">4. PCA score plot of QC vs. Sample<a class="anchor-link" href="#4.-PCA-score-plot-of-QC-vs.-Sample">&#182;</a></h2><ol>
-<li>Import the packages required to calculate the principal component analysis (PCA).</li>
-<li>Import the matplotlib packages required to plot the PCA scores</li>
-<li>Scaled the data and calculate the PCA.</li>
+<li>Import the packages required to calculate the principal component analysis (PCA)<ul>
+<li><code>numpy</code> (import as <code>np</code>)</li>
+<li><code>scikit-learn</code> packages <code>sklearn.decomposition.PCA</code>, <code>sklearn.preprocessing.StandardScaler</code></li>
+</ul>
+</li>
+<li>Import the matplotlib package required to map colours to datapoints, to plot the PCA scores<ul>
+<li><code>matplotlib.colors.ListedColormap</code></li>
+</ul>
+</li>
+<li>Scale the data and calculate the PCA.</li>
 <li>Plot PCA scores (pc1 vs pc2) labeling/coloring samples by 'QC' or 'Sample'</li>
 </ol>
 
@@ -13757,7 +13751,6 @@ div#notebook {
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
 <span class="kn">from</span> <span class="nn">sklearn.decomposition</span> <span class="k">import</span> <span class="n">PCA</span>
 <span class="kn">from</span> <span class="nn">sklearn.preprocessing</span> <span class="k">import</span> <span class="n">StandardScaler</span>
-<span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="k">as</span> <span class="nn">plt</span>
 <span class="kn">from</span> <span class="nn">matplotlib.colors</span> <span class="k">import</span> <span class="n">ListedColormap</span>
 
 <span class="c1"># Extract X matrix</span>
@@ -13820,11 +13813,15 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="5.-Bubble-plot-of-Molecular-Weights-vs.-RT-Time-(sized-by-RSD)">5. Bubble plot of Molecular Weights vs. RT Time (sized by RSD)<a class="anchor-link" href="#5.-Bubble-plot-of-Molecular-Weights-vs.-RT-Time-(sized-by-RSD)">&#182;</a></h2><ol>
-<li>Import <code>matplotlib.pyplot</code> and name it <code>plt</code></li>
-<li>Create a scatter plot the <code>peak</code> columns <code>peak.Mol_Weight</code> vs. <code>peak.RT_minutes</code>. Each dot = a metabolite peak.</li>
-<li>Make the size of the dots proportional to the value in column <code>peak.RSD</code> - <code>s=peak.RSD**2/2</code></li>
-<li>make the dots (bubbles) opaque - alpha=0.2</li>
+<h2 id="5.-Bubble-plot-of-Molecular-Weights-vs.-Retention-Time-(sized-by-RSD)">5. Bubble plot of Molecular Weights vs. Retention Time (sized by RSD)<a class="anchor-link" href="#5.-Bubble-plot-of-Molecular-Weights-vs.-Retention-Time-(sized-by-RSD)">&#182;</a></h2><ol>
+<li>Create a scatterplot of two <code>peak</code> columns: <code>peak.Mol_Weight</code> vs. <code>peak.RT_minutes</code> (each dot is a metabolite peak).<ul>
+<li>make the size of the dots proportional to the RSD of the datapoint with the argument <code>s=peak.RSD**2/2</code></li>
+<li>make the dots (bubbles) transparent with the argument <code>alpha=0.2</code></li>
+</ul>
+</li>
+<li>Add x-axis label "Molecular Weight", and y-axis label "RT minutes"</li>
+<li>Add a plot title</li>
+<li>Render the plot</li>
 </ol>
 
 </div>
@@ -13836,7 +13833,6 @@ div#notebook {
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Scatterplot of Mol_Weight vs. RT_minute with size RSD^2/2, and colour red</span>
-<span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="k">as</span> <span class="nn">plt</span>
 <span class="n">fig</span> <span class="o">=</span> <span class="n">plt</span><span class="o">.</span><span class="n">figure</span><span class="p">(</span><span class="n">figsize</span><span class="o">=</span><span class="p">(</span><span class="mi">20</span><span class="p">,</span><span class="mi">16</span><span class="p">))</span>
 <span class="n">plt</span><span class="o">.</span><span class="n">scatter</span><span class="p">(</span><span class="n">peak</span><span class="o">.</span><span class="n">Mol_Weight</span><span class="p">,</span> <span class="n">peak</span><span class="o">.</span><span class="n">RT_minutes</span><span class="p">,</span> <span class="n">s</span><span class="o">=</span><span class="n">peak</span><span class="o">.</span><span class="n">RSD</span><span class="o">**</span><span class="mi">2</span><span class="o">/</span><span class="mi">2</span><span class="p">,</span> <span class="n">alpha</span><span class="o">=</span><span class="mf">0.2</span><span class="p">,</span> <span class="n">edgecolors</span><span class="o">=</span><span class="s1">&#39;black&#39;</span><span class="p">,</span> <span class="n">c</span><span class="o">=</span><span class="s1">&#39;red&#39;</span><span class="p">)</span> 
 <span class="n">plt</span><span class="o">.</span><span class="n">xlabel</span><span class="p">(</span><span class="s1">&#39;Molecular Weight&#39;</span><span class="p">,</span> <span class="n">fontsize</span><span class="o">=</span><span class="mi">15</span><span class="p">)</span>
